# realtime-cpu-raytracer

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  profiling_log.txt  test
crates/core_conversions/: Cargo.toml
crates/core_conversions/src/: lib.rs
crates/core_data_structures/: Cargo.toml
crates/core_data_structures/src/: hashmap.rs  lib.rs  queue.rs
crates/core_fs/: Cargo.toml
crates/core_fs/src/: lib.rs
crates/core_img/: Cargo.toml
crates/core_img/src/: lib.rs
crates/core_renderer/: Cargo.toml  README.md
crates/core_renderer/src/: lib.rs
crates/core_simulation/: Cargo.toml
crates/core_simulation/src/: lib.rs
crates/core_text/: Cargo.toml
crates/core_text/src/: lib.rs  rasterizer.rs
crates/core_time/: Cargo.toml
crates/core_time/src/: lib.rs
crates/core_timing/: Cargo.toml
crates/core_timing/src/: lib.rs
crates/core_wingfx/: Cargo.toml
crates/core_wingfx/src/: lib.rs  wingfx.rs
crates/core_wingfx/src/glow_gfx/: glow_render.rs  mod.rs  shader.frag  shader.vert
src/: main.rs  profiling.rs  renderer.rs
src/core_raytracer/: camera.rs  material.rs  mod.rs  ray.rs  rng.rs  vec3.rs
src/core_raytracer/hittable/: mod.rs  sphere.rs  world.rs
