[package]
name = "rt_cputracer"
version = "0.1.0"
authors = ["Eric Olson <eric.rob.olson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
full_debug = ["profiling"]
profiling = []

[dependencies]
rand = "0.8.3" # Move to raytracer
rayon = "1.5.0"
lazy_static = {version = "1.4.0"}
rusttype = "0.9.2"

core_conversions = {path="crates/core_conversions"}
core_data_structures = {path="crates/core_data_structures"}
core_fs = {path="crates/core_fs"}
core_img = {path="crates/core_img"}
core_text = {path="crates/core_text"}
core_time = {path="crates/core_time"}
core_renderer = {path="crates/core_renderer"}
core_simulation = {path="crates/core_simulation"}
core_wingfx = {path="crates/core_wingfx"}

[build-dependencies]
anyhow = {version = "1.0"}
fs_extra = {version = "1.2"}
glob = {version = "0.3"}
rayon = {version = "1.5"}
