[package]
name = "core_renderer"
version = "0.1.0"
authors = ["Eric Olson <eric.rob.olson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core_data_structures = {path = "../core_data_structures"}
core_img = {path="../core_img"}