[package]
name = "core_text"
version = "0.1.0"
authors = ["Eric Olson <eric.rob.olson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = {version = "1.4.0"}
rusttype = "0.9.2"

core_fs = {path="../core_fs"}
core_img = {path = "../core_img"}